force-app/main/default/objects/blng__InvoiceRun__c/blng__InvoiceRun__c.object-meta.xml
<CustomObject>
    <description>Stores the details of how many Invoices generated,how many Accounts processed &amp; Credit Notes generated.</description>
    <label>Invoice Run</label>
    <nameField>
        <label>Invoice Run Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoice Runs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>