force-app/main/default/objects/blng__InvoiceRun__c/fields/blng__CleanUpStatus__c.field-meta.xml
<CustomField>
    <fullName>blng__CleanUpStatus__c</fullName>
    <label>CleanUp Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>blng__CleanUpStatus</valueSetName>
    </valueSet>
</CustomField>