force-app/main/default/objects/blng__InvoiceRun__c/fields/blng__CompletedTime__c.field-meta.xml
<CustomField>
    <fullName>blng__CompletedTime__c</fullName>
    <description>Invoice run completed  time</description>
    <label>Completed Time</label>
    <type>DateTime</type>
</CustomField>