force-app/main/default/objects/blng__InvoiceRun__c/fields/blng__InvoiceDate__c.field-meta.xml
<CustomField>
    <fullName>blng__InvoiceDate__c</fullName>
    <label>Invoice Date</label>
    <type>Date</type>
</CustomField>