force-app/main/default/objects/blng__InvoiceRun__c/fields/blng__PercentageComplete__c.field-meta.xml
<CustomField>
    <fullName>blng__PercentageComplete__c</fullName>
    <label>Percentage Complete</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>