force-app/main/default/objects/blng__InvoiceRun__c/fields/blng__ProgressBar__c.field-meta.xml
<CustomField>
    <fullName>blng__ProgressBar__c</fullName>
    <formula>IMAGE(&apos;/resource/blng__blng_slds/assets/images/InvoiceRun_ProgressBarBorder.png&apos;, &apos;Progress Bar&apos;, 10, ( blng__PercentageComplete__c * 100 )) &amp;
IMAGE(&apos;/resource/blng__blng_slds/assets/images/InvoiceRun_ProgressBarFilled.png&apos;, &apos;Progress Border&apos;, 10, (100 - blng__PercentageComplete__c * 100 )) &amp;
&apos; &apos; &amp;
TEXT (blng__PercentageComplete__c * 100) &amp;
&apos;%&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Progress Bar</label>
    <type>Text</type>
</CustomField>