force-app/main/default/objects/blng__InvoiceRun__c/fields/blng__StartTime__c.field-meta.xml
<CustomField>
    <fullName>blng__StartTime__c</fullName>
    <label>Start Time</label>
    <type>DateTime</type>
</CustomField>