force-app/main/default/objects/blng__InvoiceRun__c/fields/blng__TargetDate__c.field-meta.xml
<CustomField>
    <fullName>blng__TargetDate__c</fullName>
    <label>Target Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>