force-app/main/default/objects/blng__InvoiceRun__c/listViews/blng__All_Invoice_Runs.listView-meta.xml
<ListView>
    <fullName>blng__All_Invoice_Runs</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All Invoice Runs</label>
    <language>en_US</language>
</ListView>